--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -6,9 +6,15 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="matrix"
         android:id="@+id/bg"
 
         android:background="@drawable/tiles"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/radial"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
